added recat router and firebase integration

--- a/src/assets/scss/components/_course.scss
+++ b/src/assets/scss/components/_course.scss
@@ -1,5 +1,5 @@
 .course {
-  background-color: #ffffff;
+  background-color: $color-white;
   box-shadow: 0 2px 12px 0px rgba(60, 60, 60, 0.1);
   cursor: pointer;
   margin: 0 auto 30px;
