--- a/src/assets/scss/components/_recommended-courses.scss
+++ b/src/assets/scss/components/_recommended-courses.scss
@@ -1,4 +1,4 @@
-.courses {
+.recommended-courses {
   background: url("../../images/wave2.svg");
   background-repeat: no-repeat;
   padding: 100px 20px;
