--- a/src/assets/scss/components/_join-us.scss
+++ b/src/assets/scss/components/_join-us.scss
@@ -1,18 +1,32 @@
 .join-us {
-  padding: 0 20px;
+  background-color: #ffffff;
+  padding: 40px 20px;
+  text-align: center;
 
   @include breakpoint($sm) {
-    max-width: 745px;
+    padding: 40px;
   }
 
   @include breakpoint($md) {
-    max-width: 920px;
     margin: 0 auto;
-    padding: 35px 20px 0;
+    padding: 40px 20px;
   }
 
-  @include breakpoint($lg) {
-    max-width: 1170px;
+  a {
+    display: block;
+    margin: 0 auto;
+    width: auto;
+    max-width: 185px;
+    text-align: center;
+    font-size: 16px;
+  }
+
+  p {
+    margin: 0 0 40px;
+
+    @include breakpoint($md) {
+      font-size: 20px;
+    }
   }
 
   .item {
