--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,9 @@
 @import "./assets/scss/components/groups-description";
 @import "./assets/scss/components/group";
 @import "./assets/scss/components/talk";
+
+// Dashboard
+@import "./assets/scss/components/dashboard/dashboard";
+@import "./assets/scss/components/dashboard/articles";
+@import "./assets/scss/components/dashboard/aside-navigation";
+@import "./assets/scss/components/dashboard/social-area";
