added dashboard styles

--- a/src/assets/scss/components/dashboard/_dashboard.scss
+++ b/src/assets/scss/components/dashboard/_dashboard.scss
@@ -1,7 +1,9 @@
 .dashboard {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   justify-content: space-between;
   max-width: 1170px;
   margin: 0 auto;
+  padding: 20px;
 }
