--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,3 +25,6 @@
 @import "./assets/scss/components/dashboard/articles";
 @import "./assets/scss/components/dashboard/aside-navigation";
 @import "./assets/scss/components/dashboard/social-area";
+
+// Live
+@import "./assets/scss/components/live/live";
