--- a/src/assets/scss/components/dashboard/_articles.scss
+++ b/src/assets/scss/components/dashboard/_articles.scss
@@ -4,4 +4,51 @@
   @include breakpoint($md) {
     width: 25%;
   }
+
+  &__list {
+    padding: 30px 0 50px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center center;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 90%;
+    margin: 0 auto 30px;
+
+    @include breakpoint($sm) {
+      max-width: 250px;
+    }
+
+    .item__image {
+      width: 30%;
+
+      @include breakpoint($sm) {
+        width: 40%;
+      }
+
+      img {
+        max-width: 75px;
+      }
+    }
+
+    .item__description {
+      width: 70%;
+
+      @include breakpoint($sm) {
+        width: 60%;
+      }
+
+      a {
+        color: $color-blue-dark;
+        font-size: 16px;
+        font-weight: 600;
+        text-decoration: underline;
+        white-space: normal;
+      }
+    }
+  }
 }
