--- a/src/assets/scss/components/dashboard/_aside-navigation.scss
+++ b/src/assets/scss/components/dashboard/_aside-navigation.scss
@@ -1,5 +1,22 @@
-.aside-navigation {
+.asideNavigation {
   width: 100%;
+
+  &__list {
+    list-style: none;
+    font-size: 16px;
+  }
+
+  &__item {
+    color: $color-blue-dark;
+    margin: 10px;
+    display: block;
+    transition: all 0.5s;
+
+    &:hover {
+      padding-left: 5px;
+      transition: all 0.5s;
+    }
+  }
 
   @include breakpoint($md) {
     width: 25%;
