--- a/src/assets/scss/components/dashboard/_articles.scss
+++ b/src/assets/scss/components/dashboard/_articles.scss
@@ -8,8 +8,12 @@
   &__list {
     padding: 30px 0 50px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     place-items: center center;
+
+    @include breakpoint($sm) {
+      grid-template-columns: 1fr 1fr;
+    }
 
     @include breakpoint($md) {
       grid-template-columns: 1fr;
@@ -33,17 +37,19 @@
     }
 
     .item__image {
-      width: 30%;
+      width: 115px;
 
       @include breakpoint($sm) {
-        width: 40%;
+        width: 120px;
       }
 
       @include breakpoint($md) {
-        width: 30%;
+        width: 115px;
       }
 
       img {
+        display: block;
+        margin: 0 auto;
         max-width: 75px;
       }
     }
