--- a/src/assets/scss/components/dashboard/_aside-navigation.scss
+++ b/src/assets/scss/components/dashboard/_aside-navigation.scss
@@ -1,24 +1,59 @@
 .asideNavigation {
   width: 100%;
 
+  h3 {
+    display: none;
+  }
+
   &__list {
+    width: 100%;
     list-style: none;
-    font-size: 16px;
+    display: inline-flex;
+    justify-content: space-around;
+    margin-bottom: 20px;
   }
 
   &__item {
     color: $color-blue-dark;
-    margin: 10px;
-    display: block;
-    transition: all 0.5s;
+    margin: 5px;
+    font-size: 16px;
+    background-color: $color-gray;
+    border-radius: 5px;
+    padding: 5px;
 
-    &:hover {
-      padding-left: 5px;
-      transition: all 0.5s;
+
+  }
+
+  @include breakpoint($sm) {
+    &__list {
+      justify-content: flex-start;
     }
   }
 
   @include breakpoint($md) {
-    width: 25%;
+    width: 15%;
+
+    h3 {
+      display: initial;
+    }
+
+    &__list {
+      display: initial;
+    }
+
+    &__item {
+      color: $color-blue-dark;
+      margin: 10px 0;
+      background-color: transparent;
+      display: block;
+
+      &:hover {
+        padding-left: 15px;
+        transition: all 0.5s;
+      }
+    }
+
+
+
   }
 }
