--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -1,4 +1,9 @@
 .nav {
+  &__button {
+    @include breakpoint($md) {
+      display: none;
+    }
+  }
   &__content {
     border-bottom: 1px solid $color-gray;
     padding: 10px 15px;
@@ -36,8 +41,6 @@
             border-bottom: 2px solid $color-blue-dark;
             transition: border 0.3s;
           }
-
-
         }
       }
     }
