--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -1,5 +1,6 @@
 .nav {
   &__button {
+    cursor: pointer;
     @include breakpoint($md) {
       display: none;
     }
@@ -62,6 +63,7 @@
 
     img {
       max-width: 50px;
+      cursor: pointer;
     }
 
     span {
