--- a/src/assets/scss/components/dashboard/_articles.scss
+++ b/src/assets/scss/components/dashboard/_articles.scss
@@ -1,35 +1,13 @@
 .articles {
-  width: 100%;
-
-  @include breakpoint($md) {
-    width: 25%;
-  }
-
   &__list {
-    padding: 30px 0 50px;
-    display: grid;
-    grid-template-columns: 1fr;
-    place-items: center center;
-
-    @include breakpoint($sm) {
-      grid-template-columns: 1fr 1fr;
-    }
-
-    @include breakpoint($md) {
-      grid-template-columns: 1fr;
-    }
+    padding: 30px 0;
   }
 
   &__item {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    max-width: 90%;
+    justify-content: flex-start;
     margin: 0 auto 30px;
-
-    @include breakpoint($sm) {
-      max-width: 250px;
-    }
 
     @include breakpoint($md) {
       margin: 0 auto 20px;
@@ -37,38 +15,38 @@
     }
 
     .item__image {
-      width: 115px;
+      width: 15%;
 
       @include breakpoint($sm) {
-        width: 120px;
+        width: 10%;
       }
 
       @include breakpoint($md) {
-        width: 115px;
+        width: 20%;
       }
 
       img {
         display: block;
-        margin: 0 auto;
-        max-width: 75px;
+        margin: 0;
+        max-width: 40px;
       }
     }
 
     .item__description {
-      width: 70%;
+      width: 85%;
 
       @include breakpoint($sm) {
-        width: 60%;
+        width: 90%;
       }
 
       @include breakpoint($md) {
-        width: 70%;
+        width: 80%;
       }
 
       a {
         color: $color-blue-dark;
-        font-size: 16px;
-        font-weight: 600;
+        font-size: 14px;
+        font-weight: 400;
         text-decoration: underline;
         white-space: normal;
       }
