--- a/src/assets/scss/components/dashboard/_aside-navigation.scss
+++ b/src/assets/scss/components/dashboard/_aside-navigation.scss
@@ -1,5 +1,6 @@
 .asideNavigation {
   width: 100%;
+  margin-bottom: 30px;
 
   h3 {
     display: none;
@@ -20,8 +21,6 @@
     background-color: $color-gray;
     border-radius: 5px;
     padding: 5px;
-
-
   }
 
   @include breakpoint($sm) {
@@ -52,8 +51,5 @@
         transition: all 0.5s;
       }
     }
-
-
-
   }
 }
