--- a/src/assets/scss/components/live/live.scss
+++ b/src/assets/scss/components/live/live.scss
@@ -1,30 +1,30 @@
-.live {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+// .live {
+//   display: flex;
+//   align-items: flex-start;
+//   justify-content: space-between;
 
-  &__video {
-    padding: 0 0 30px;
-    width: 100%;
+//   &__video {
+//     padding: 0 0 30px;
+//     width: 100%;
 
-    @include breakpoint($md) {
-      width: 50%;
-    }
+//     @include breakpoint($md) {
+//       width: 50%;
+//     }
 
-    h3 {
-      margin: 20px 0;
-    }
+//     h3 {
+//       margin: 20px 0;
+//     }
 
-    p {
-      line-height: 26px;
-    }
-  }
+//     p {
+//       line-height: 26px;
+//     }
+//   }
 
-  &__talks {
-    width: 100%;
+//   &__talks {
+//     width: 100%;
 
-    @include breakpoint($md) {
-      width: 50%;
-    }
-  }
-}
+//     @include breakpoint($md) {
+//       width: 50%;
+//     }
+//   }
+// }
