refactored last videos component

--- a/src/assets/scss/components/dashboard/_membership.scss
+++ b/src/assets/scss/components/dashboard/_membership.scss
@@ -1,4 +1,9 @@
 .membership {
+  background: rgba(255, 204, 0, 0.09);
+  padding: 10px 15px;
+  margin-bottom: 40px;
+  border-radius: 3px;
+
   &__list {
     padding: 20px 0;
   }
