--- a/src/assets/scss/components/dashboard/_video.scss
+++ b/src/assets/scss/components/dashboard/_video.scss
@@ -1,9 +1,15 @@
 .video {
   width: 100%;
   cursor: pointer;
+  padding-bottom: 20px;
 
   @include breakpoint($sm) {
     width: 30%;
+  }
+
+  a {
+    color: $color-blue-dark;
+    white-space: normal;
   }
 
   iframe {
@@ -18,5 +24,10 @@
     @include breakpoint($md) {
       height: 120px;
     }
+  }
+
+  p {
+    font-size: 14px;
+    margin-top: 5px;
   }
 }
