--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,7 @@
 @import "./assets/scss/components/dashboard/question";
 @import "./assets/scss/components/dashboard/membership";
 @import "./assets/scss/components/dashboard/last-videos";
+@import "./assets/scss/components/dashboard/last-talks";
 @import "./assets/scss/components/dashboard/video";
 
 // Live
