--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@
 @import "./assets/scss/components/group";
 @import "./assets/scss/components/talk";
 @import "./assets/scss/components/announcement";
+@import "./assets/scss/components/calendar";
 
 // Dashboard
 @import "./assets/scss/components/dashboard/dashboard";
