--- a/src/assets/scss/components/_group.scss
+++ b/src/assets/scss/components/_group.scss
@@ -39,10 +39,16 @@
     width: 65%;
     padding: 0 20px;
 
-    h3 {
+    a {
+      color: $color-blue-dark;
+      display: block;
+      font-weight: 600;
+      padding: 10px 0;
+      text-decoration: underline;
     }
 
-    p {
+    h3 {
+      font-size: 14px;
     }
   }
 }
