--- a/src/assets/scss/components/groups/_session.scss
+++ b/src/assets/scss/components/groups/_session.scss
@@ -5,7 +5,7 @@
   margin: 0 30px 30px 0;
 
   @include breakpoint($sm) {
-    max-width: 250px;
+    max-width: 270px;
   }
 
   &__video {
@@ -15,7 +15,7 @@
   }
 
   &__description {
-    padding: 20px 10px 50px;
+    padding: 20px;
 
     h4 {
       margin-bottom: 10px;
@@ -23,6 +23,28 @@
 
     p {
       font-size: 14px;
+    }
+  }
+
+  &__link {
+    padding: 0 20px 20px;
+    text-align: center;
+
+    a {
+      border: 1px solid #27ae60;
+      display: block;
+      color: #27ae60;
+      cursor: pointer;
+      font-weight: 600;
+      padding: 15px 20px;
+      margin: 0;
+      max-width: 100%;
+      word-spacing: 2px;
+
+      &:hover {
+        background-color: #27ae60;
+        color: #fff;
+      }
     }
   }
 }
