--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,3 +46,4 @@
 @import "./assets/scss/components/groups/session";
 @import "./assets/scss/components/groups/group-sessions";
 @import "./assets/scss/components/groups/study-group";
+@import "./assets/scss/components/groups/session-video";
