added admin resources component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,7 @@
 @import "./assets/scss/components/groups/group-sessions";
 @import "./assets/scss/components/groups/study-group";
 @import "./assets/scss/components/groups/session-video";
+
+
+//Admin
+@import "./assets/scss/components/admin/admin";
