added darkmode support

--- a/src/assets/scss/components/_calendar.scss
+++ b/src/assets/scss/components/_calendar.scss
@@ -15,7 +15,6 @@
   font-size: 25px;
   padding: 20px 0;
   font-weight: bold;
-
 }
 
 .calendar__header {
@@ -57,6 +56,10 @@
     background-color: transparent;
     padding: 5px 10px;
   }
+
+  @media (prefers-color-scheme: dark) {
+    color: $color-blue-dark;
+  }
 }
 
 .item__day {
@@ -94,15 +97,22 @@
   font-size: 14px;
 }
 
-
 .card__description {
   padding: 5px 0;
   margin: 5px 0;
+
+  @media (prefers-color-scheme: dark) {
+    color: $color-blue-dark;
+  }
 }
 
 .card__time {
   font-weight: 600;
   font-size: 14px;
+
+  @media (prefers-color-scheme: dark) {
+    color: $color-blue-dark;
+  }
 }
 
 .javascript {
@@ -125,7 +135,6 @@
 }
 
 .vacio {
-
   display: none;
 
   @include breakpoint($sm) {
