--- a/src/assets/scss/components/_groups-description.scss
+++ b/src/assets/scss/components/_groups-description.scss
@@ -12,6 +12,10 @@
       padding: 10px;
       width: auto;
       display: inline-block;
+
+      @media (prefers-color-scheme: dark) {
+        color: $color-blue-dark;
+      }
     }
   }
 
