--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -20,6 +20,11 @@ body {
   font-family: $font-primary;
   margin: 0;
   padding: 0;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: #222f3e;
+    color: $color-white;
+  }
 }
 
 h1,
@@ -32,6 +37,10 @@ h6 {
   font-family: $font-heading;
   margin: 0;
   padding: 0;
+
+  @media (prefers-color-scheme: dark) {
+    color: $color-white;
+  }
 }
 
 h1 {
