--- a/src/assets/scss/components/_course.scss
+++ b/src/assets/scss/components/_course.scss
@@ -39,6 +39,10 @@
       @include breakpoint($md) {
         font-size: 18px;
       }
+
+      @media (prefers-color-scheme: dark) {
+        color: $color-blue-dark;
+      }
     }
   }
 
@@ -54,6 +58,10 @@
 
       @include breakpoint($md) {
         font-size: 16px;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        color: $color-blue-dark;
       }
     }
   }
