--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -42,6 +42,14 @@
             border-bottom: 2px solid $color-blue-dark;
             transition: border 0.3s;
           }
+
+          @media (prefers-color-scheme: dark) {
+            color: $color-white;
+
+            &:hover {
+              border-bottom: 2px solid $color-white;
+            }
+          }
         }
       }
     }
