--- a/src/assets/scss/components/dashboard/_articles.scss
+++ b/src/assets/scss/components/dashboard/_articles.scss
@@ -1,6 +1,10 @@
 .articles {
   &__list {
     padding: 30px 0;
+
+    @include breakpoint($md) {
+      min-height: 320px;
+    }
   }
 
   &__item {
@@ -49,6 +53,10 @@
         font-weight: 400;
         text-decoration: underline;
         white-space: normal;
+
+        @media (prefers-color-scheme: dark) {
+          color: $color-white;
+        }
       }
     }
   }
