--- a/src/assets/scss/components/groups/_session-video.scss
+++ b/src/assets/scss/components/groups/_session-video.scss
@@ -20,6 +20,35 @@
     }
   }
 
+  &__link {
+    padding: 0 0 20px 20px;
+
+    @include breakpoint($md) {
+      padding: 0 0 30px 20px;
+    }
+
+    @include breakpoint($lg) {
+      padding: 0 0 30px 0;
+    }
+
+    a {
+      border: 1px solid #27ae60;
+      display: inline-block;
+      color: #27ae60;
+      cursor: pointer;
+      font-weight: 600;
+      padding: 15px 20px;
+
+      max-width: 100%;
+      word-spacing: 2px;
+
+      &:hover {
+        background-color: #27ae60;
+        color: #fff;
+      }
+    }
+  }
+
   &__media {
     @include breakpoint($md) {
       width: 70%;
@@ -29,12 +58,11 @@
       max-width: 100%;
       padding: 0;
       width: 100%;
+      outline: none;
 
       @include breakpoint($md) {
-
         padding-top: 30px;
       }
-
     }
   }
 
