--- a/src/assets/scss/components/groups/_session.scss
+++ b/src/assets/scss/components/groups/_session.scss
@@ -4,6 +4,10 @@
   max-width: 290px;
   margin: 0 0 30px 0;
 
+  @media (prefers-color-scheme: dark) {
+    box-shadow: 0 2px 12px 0 rgba(255, 255, 255, 0.1);
+  }
+
   @include breakpoint($sm) {
     max-width: 270px;
   }
@@ -56,29 +60,7 @@
       }
     }
   }
+}
 
-  &Video__link {
-    padding: 0 0 20px 20px;
-
-    @include breakpoint($md) {
-      padding: 0 0 30px 0;
-    }
-
-    a {
-      border: 1px solid #27ae60;
-      display: inline-block;
-      color: #27ae60;
-      cursor: pointer;
-      font-weight: 600;
-      padding: 15px 20px;
-
-      max-width: 100%;
-      word-spacing: 2px;
-
-      &:hover {
-        background-color: #27ae60;
-        color: #fff;
-      }
-    }
-  }
+@media (prefers-color-scheme: dark) {
 }
