--- a/src/assets/scss/components/dashboard/_articles.scss
+++ b/src/assets/scss/components/dashboard/_articles.scss
@@ -51,8 +51,19 @@
         color: $color-blue-dark;
         font-size: 14px;
         font-weight: 400;
-        text-decoration: underline;
+        text-decoration: none;
         white-space: normal;
+        position: relative;
+
+        &::after {
+          content: "";
+          width: 100%;
+          position: absolute;
+          left: 0;
+          bottom: -2px;
+          border-width: 0 0 1px;
+          border-style: solid;
+        }
 
         @media (prefers-color-scheme: dark) {
           color: $color-white;
