--- a/src/assets/scss/components/dashboard/_membership.scss
+++ b/src/assets/scss/components/dashboard/_membership.scss
@@ -4,6 +4,10 @@
   margin-bottom: 40px;
   border-radius: 3px;
 
+  @media (prefers-color-scheme: dark) {
+    background: rgb(35, 156, 86);
+  }
+
   &__list {
     padding: 20px 0;
   }
@@ -16,7 +20,18 @@
       color: $color-blue-dark;
       font-size: 16px;
       font-weight: 600;
-      text-decoration: underline;
+      text-decoration: none;
+      position: relative;
+
+      &::after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        left: 0;
+        bottom: -2px;
+        border-width: 0 0 1px;
+        border-style: solid;
+      }
 
       @media (prefers-color-scheme: dark) {
         color: $color-white;
