added new meeting to calendar
we need to refactor calendar component with firebase

--- a/src/assets/scss/components/_calendar.scss
+++ b/src/assets/scss/components/_calendar.scss
@@ -129,6 +129,11 @@
   color: white;
 }
 
+.english {
+  background-color: #2ecc71;
+  color: white;
+}
+
 .live {
   background-color: #f80902;
   color: white;
