--- a/src/assets/scss/components/_groups-description.scss
+++ b/src/assets/scss/components/_groups-description.scss
@@ -13,9 +13,9 @@
       width: auto;
       display: inline-block;
 
-      @media (prefers-color-scheme: dark) {
-        color: $color-blue-dark;
-      }
+      // @media (prefers-color-scheme: dark) {
+      //   color: $color-blue-dark;
+      // }
     }
   }
 
