--- a/src/assets/scss/components/dashboard/_articles.scss
+++ b/src/assets/scss/components/dashboard/_articles.scss
@@ -65,9 +65,9 @@
           border-style: solid;
         }
 
-        @media (prefers-color-scheme: dark) {
-          color: $color-white;
-        }
+        // @media (prefers-color-scheme: dark) {
+        //   color: $color-white;
+        // }
       }
     }
   }
