--- a/src/assets/scss/components/dashboard/_membership.scss
+++ b/src/assets/scss/components/dashboard/_membership.scss
@@ -4,9 +4,9 @@
   margin-bottom: 40px;
   border-radius: 3px;
 
-  @media (prefers-color-scheme: dark) {
-    background: rgb(35, 156, 86);
-  }
+  // @media (prefers-color-scheme: dark) {
+  //   background: rgb(35, 156, 86);
+  // }
 
   &__list {
     padding: 20px 0;
