--- a/src/assets/scss/components/dashboard/_question.scss
+++ b/src/assets/scss/components/dashboard/_question.scss
@@ -22,9 +22,9 @@
     color: $color-blue-dark;
     font-size: 12px;
 
-    @media (prefers-color-scheme: dark) {
-      color: $color-white;
-    }
+    // @media (prefers-color-scheme: dark) {
+    //   color: $color-white;
+    // }
   }
 }
 
