--- a/src/assets/scss/components/dashboard/_video.scss
+++ b/src/assets/scss/components/dashboard/_video.scss
@@ -30,8 +30,8 @@
     font-size: 14px;
     margin-top: 5px;
 
-    @media (prefers-color-scheme: dark) {
-      color: $color-white;
-    }
+    // @media (prefers-color-scheme: dark) {
+    //   color: $color-white;
+    // }
   }
 }
