--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -21,9 +21,19 @@ body {
   margin: 0;
   padding: 0;
 
-  @media (prefers-color-scheme: dark) {
-    background-color: #222f3e;
-    color: $color-white;
+  // @media (prefers-color-scheme: dark) {
+  //   background-color: #222f3e;
+  //   color: $color-white;
+  // }
+}
+
+form {
+  input {
+    font-family: $font-primary;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
 
@@ -38,9 +48,9 @@ h6 {
   margin: 0;
   padding: 0;
 
-  @media (prefers-color-scheme: dark) {
-    color: $color-white;
-  }
+  // @media (prefers-color-scheme: dark) {
+  //   color: $color-white;
+  // }
 }
 
 h1 {
