--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -41,21 +41,26 @@
 .icon-phone:before {
   content: "\e942";
 }
+
+.icon-discord:before {
+  content: "\e900";
+  color: #fff;
+}
+.icon-check:before {
+  content: "\ea10";
+}
+.icon-player:before {
+  content: "\ea15";
+}
 .icon-facebook:before {
   content: "\ea91";
 }
 .icon-instagram:before {
   content: "\ea92";
 }
-.icon-whatsapp:before {
-  content: "\ea93";
-}
 .icon-twitter:before {
   content: "\ea96";
 }
 .icon-youtube:before {
   content: "\ea9d";
-}
-.icon-discord:before {
-  content: "\e904";
 }
