--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,11 +1,13 @@
 //Colors
 $color-primary: #fbc531;
+$color-primary-dark: #ffdd59;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-blue-dark: #2c3e50;
 $color-smoke: #ecf0f1;
 $color-gray: #cccccc;
 $color-heading: #2c3e50;
+$font-primary-color: #3d3d3d;
 
 //Fonts
 $font-primary: "Lato", sans-serif;
