--- a/src/assets/scss/components/_group.scss
+++ b/src/assets/scss/components/_group.scss
@@ -8,9 +8,9 @@
   align-items: center;
   transition: all ease 500ms;
 
-  @media (prefers-color-scheme: dark) {
-    box-shadow: 0 2px 12px 0px rgba(255, 255, 255, 0.1);
-  }
+  // @media (prefers-color-scheme: dark) {
+  //   box-shadow: 0 2px 12px 0px rgba(255, 255, 255, 0.1);
+  // }
 
   &:hover {
     transform: translateY(-0.25rem);
