--- a/src/assets/scss/components/_join-us.scss
+++ b/src/assets/scss/components/_join-us.scss
@@ -22,9 +22,9 @@
   }
 
   h2 {
-    @media (prefers-color-scheme: dark) {
-      color: $color-blue-dark;
-    }
+    // @media (prefers-color-scheme: dark) {
+    //   color: $color-blue-dark;
+    // }
   }
 
   p {
@@ -34,9 +34,9 @@
       font-size: 20px;
     }
 
-    @media (prefers-color-scheme: dark) {
-      color: $color-blue-dark;
-    }
+    // @media (prefers-color-scheme: dark) {
+    //   color: $color-blue-dark;
+    // }
   }
 
   .item {
@@ -69,17 +69,17 @@
       h3 {
         margin-bottom: 10px;
 
-        @media (prefers-color-scheme: dark) {
-          color: $color-blue-dark;
-        }
+        // @media (prefers-color-scheme: dark) {
+        //   color: $color-blue-dark;
+        // }
       }
 
       p {
         margin-bottom: 20px;
 
-        @media (prefers-color-scheme: dark) {
-          color: $color-blue-dark;
-        }
+        // @media (prefers-color-scheme: dark) {
+        //   color: $color-blue-dark;
+        // }
       }
 
       a {
