--- a/src/assets/scss/components/_recommended-course.scss
+++ b/src/assets/scss/components/_recommended-course.scss
@@ -1,11 +1,13 @@
-.course {
+.recommended-course {
   background-color: $color-white;
   box-shadow: 0 2px 12px 0px rgba(60, 60, 60, 0.1);
   cursor: pointer;
   margin: 0 auto 30px;
   max-width: 290px;
   padding: 10px 15px;
+  position: relative;
   transition: all ease 500ms;
+  min-height: 350px;
 
   &:hover {
     // outline: auto;
@@ -14,19 +16,25 @@
     box-shadow: 0 2px 12px 0px rgba(60, 60, 60, 0.42);
   }
 
+  &.unavailable {
+    //background-color: hsla(0, 0.8%, 51%, 0.05);
+    pointer-events: none;
+  }
+
   @include breakpoint($sm) {
-    max-width: 220px;
+    max-width: 310px;
   }
 
   @include breakpoint($md) {
-    max-width: 250px;
+    width: 350px;
   }
 
   @include breakpoint($lg) {
-    max-width: 300px;
+    max-width: 275px;
   }
 
   &__title {
+    min-height: 50px;
     h3 {
       font-size: 18px;
       font-weight: bold;
@@ -76,5 +84,14 @@
       text-align: center;
       width: auto;
     }
+  }
+
+  &__status {
+    background: salmon;
+    color: $color-white;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 5px 10px;
   }
 }
