--- a/src/assets/scss/components/dashboard/_aside-navigation.scss
+++ b/src/assets/scss/components/dashboard/_aside-navigation.scss
@@ -53,9 +53,9 @@
     }
   }
 
-  @media (prefers-color-scheme: dark) {
-    &__item {
-      color: $color-white;
-    }
-  }
+  // @media (prefers-color-scheme: dark) {
+  //   &__item {
+  //     color: $color-white;
+  //   }
+  // }
 }
