--- a/src/assets/scss/components/groups/_group-session.scss
+++ b/src/assets/scss/components/groups/_group-session.scss
@@ -1,12 +1,12 @@
-.session {
+.group-session {
   box-shadow: 0 2px 12px 0 rgba(60, 60, 60, 0.1);
   border-radius: 3px;
   max-width: 290px;
   margin: 0 0 30px 0;
 
-  @media (prefers-color-scheme: dark) {
-    box-shadow: 0 2px 12px 0 rgba(255, 255, 255, 0.1);
-  }
+  // @media (prefers-color-scheme: dark) {
+  //   box-shadow: 0 2px 12px 0 rgba(255, 255, 255, 0.1);
+  // }
 
   @include breakpoint($sm) {
     max-width: 270px;
