added nav links

--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -27,40 +27,25 @@
 }
 
 .icon-buymeacoffee:before {
-  content: "\e902";
-}
-.icon-patreon:before {
-  content: "\e903";
-}
-.icon-like:before {
-  content: "\e901";
-}
-.icon-comment:before {
-  content: "\e900";
-}
-.icon-phone:before {
-  content: "\e942";
-}
-
-.icon-discord:before {
-  content: "\e900";
-  color: #fff;
-}
-.icon-check:before {
-  content: "\ea10";
-}
-.icon-player:before {
-  content: "\ea15";
-}
-.icon-facebook:before {
-  content: "\ea91";
-}
-.icon-instagram:before {
-  content: "\ea92";
-}
-.icon-twitter:before {
-  content: "\ea96";
+  content: "\e906";
 }
 .icon-youtube:before {
-  content: "\ea9d";
+  content: "\e905";
+}
+.icon-twitter:before {
+  content: "\e900";
+}
+.icon-instagram:before {
+  content: "\e901";
+}
+.icon-facebook:before {
+  content: "\e902";
+}
+.icon-discord:before {
+  content: "\e903";
+  color: #fff;
+}
+.icon-patreon:before {
+  content: "\e904";
+  color: #f96854;
 }
