--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,3 +62,6 @@
 //Join
 @import "./assets/scss/components/join-us/join";
 @import "./assets/scss/components/join-us/join-mentor";
+
+//Not found
+@import "./assets/scss/components/not-found/not-found";
