--- a/src/assets/scss/components/dashboard/_membership.scss
+++ b/src/assets/scss/components/dashboard/_membership.scss
@@ -33,9 +33,9 @@
         border-style: solid;
       }
 
-      @media (prefers-color-scheme: dark) {
-        color: $color-white;
-      }
+      // @media (prefers-color-scheme: dark) {
+      //   color: $color-white;
+      // }
     }
   }
 
