--- a/src/assets/scss/components/course/_course.scss
+++ b/src/assets/scss/components/course/_course.scss
@@ -345,11 +345,12 @@
         }
 
         &:before {
-          content: "\ea10";
+          content: "\e907";
           font-family: "icomoon";
           margin-right: 10px;
           position: relative;
           top: 3px;
+          color: #fbc531;
         }
       }
 
