--- a/src/assets/scss/components/course/_course-session.scss
+++ b/src/assets/scss/components/course/_course-session.scss
@@ -26,7 +26,7 @@
     }
 
     .icon {
-      color: #c56cf0;
+      color: #fbc531;
       position: relative;
       top: 5px;
       margin-right: 10px;
