--- a/src/assets/scss/components/dashboard/_membership.scss
+++ b/src/assets/scss/components/dashboard/_membership.scss
@@ -3,11 +3,10 @@
   padding: 10px 15px;
   margin-bottom: 40px;
   border-radius: 3px;
-
+  box-shadow: 0 2px 12px 0px rgb(213, 213, 209);
   // @media (prefers-color-scheme: dark) {
   //   background: rgb(35, 156, 86);
   // }
-
   &__list {
     padding: 20px 0;
   }
