added login to platform

--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -55,3 +55,9 @@
   content: "\e904";
   color: #f96854;
 }
+.icon-user:before {
+  content: "\e909";
+}
+.icon-google:before {
+  content: "\e90a";
+}
