--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,7 @@
 @import "./assets/scss/components/talk";
 @import "./assets/scss/components/announcement";
 @import "./assets/scss/components/calendar";
+@import "./assets/scss/components/login.scss";
 
 //Commons
 @import "./assets/scss/components/commons/hero";
