--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -32,6 +32,11 @@
         display: inline-block;
         padding: 0 30px 0 0;
 
+        &.logout {
+          cursor: pointer;
+          padding: 5px 15px;
+        }
+
         a {
           color: $color-blue-dark;
           transition: border 0.3s;
@@ -41,6 +46,10 @@
             padding-bottom: 25px;
             border-bottom: 2px solid $color-blue-dark;
             transition: border 0.3s;
+          }
+
+          .icon {
+            margin-right: 5px;
           }
 
           // @media (prefers-color-scheme: dark) {
