--- a/src/assets/scss/components/groups/_session-video.scss
+++ b/src/assets/scss/components/groups/_session-video.scss
@@ -60,8 +60,31 @@
   }
 
   &__media {
+    width: 100%;
+
     @include breakpoint($md) {
       width: 70%;
+    }
+
+    iframe {
+      max-width: 100%;
+      height: 210px;
+
+      @include breakpoint(576px) {
+        height: 360px;
+      }
+
+      @include breakpoint($sm) {
+        height: 435px;
+      }
+
+      @include breakpoint($md) {
+        height: 365px;
+      }
+
+      @include breakpoint($lg) {
+        height: 470px;
+      }
     }
 
     .video {
