--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,7 @@
 @import "./assets/scss/components/dashboard/last-videos";
 @import "./assets/scss/components/dashboard/last-talks";
 @import "./assets/scss/components/dashboard/video";
+@import "./assets/scss/components/dashboard/certification";
 
 // Live
 @import "./assets/scss/components/live/live";
