added new updates
-updated calendar
-updated recommended courses

--- a/src/assets/scss/components/_recommended-course.scss
+++ b/src/assets/scss/components/_recommended-course.scss
@@ -92,6 +92,10 @@
     position: absolute;
     top: 10px;
     right: 15px;
-    padding: 5px 10px;
+    padding: 8px 15px;
+
+    &.available {
+      background-color: #27ae60;
+    }
   }
 }
