--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,26 +5,30 @@
 @import "./assets/scss/base/commons";
 @import "./assets/scss/base/animation";
 
-@import "./assets/scss/components/button";
-@import "./assets/scss/components/footer";
-@import "./assets/scss/components/nav";
-@import "./assets/scss/components/posts";
-@import "./assets/scss/components/header";
-@import "./assets/scss/components/banner";
-@import "./assets/scss/components/recommended-courses";
-@import "./assets/scss/components/recommended-course";
-@import "./assets/scss/components/join-us";
-@import "./assets/scss/components/subscribe";
-@import "./assets/scss/components/groups-header";
-@import "./assets/scss/components/groups-description";
-@import "./assets/scss/components/group";
-@import "./assets/scss/components/talk";
-@import "./assets/scss/components/announcement";
-@import "./assets/scss/components/calendar";
-@import "./assets/scss/components/login.scss";
-
 //Commons
+@import "./assets/scss/components/commons/button";
 @import "./assets/scss/components/commons/hero";
+@import "./assets/scss/components/commons/footer";
+@import "./assets/scss/components/commons/nav";
+@import "./assets/scss/components/commons/header";
+
+//components
+@import "./assets/scss/components/recommended-courses/recommended-courses";
+@import "./assets/scss/components/recommended-courses/recommended-course";
+@import "./assets/scss/components/join-us/join-us";
+@import "./assets/scss/components/group/group";
+@import "./assets/scss/components/talks/talk";
+@import "./assets/scss/components/announcements/announcement";
+@import "./assets/scss/components/calendar/calendar";
+
+//Containers
+@import "./assets/scss/containers/login.scss";
+@import "./assets/scss/containers/groups";
+@import "./assets/scss/containers/lessons";
+@import "./assets/scss/containers/join";
+
+//Skeletons
+@import "./assets/scss/components/skeletons/skeletons";
 
 //Forms
 @import "./assets/scss/components/forms/form-sign-in";
@@ -52,17 +56,14 @@
 // Live
 @import "./assets/scss/components/live/live";
 
-//Groups
-@import "./assets/scss/components/groups/group-session";
-@import "./assets/scss/components/groups/group-sessions";
-@import "./assets/scss/components/groups/study-group";
-@import "./assets/scss/components/groups/session-video";
+//Lessons
+@import "./assets/scss/components/lessons/lesson";
+@import "./assets/scss/components/lessons/lesson-video";
 
 //Admin
 @import "./assets/scss/components/admin/admin";
 
 //Join
-@import "./assets/scss/components/join-us/join";
 @import "./assets/scss/components/join-us/join-mentor";
 
 //Not found
