added basic elements

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,7 @@
 @import "./assets/scss/components/dashboard/last-talks";
 @import "./assets/scss/components/dashboard/video";
 @import "./assets/scss/components/dashboard/certification";
+@import "./assets/scss/components/filters/category-filter";
 
 // Live
 @import "./assets/scss/components/live/live";
