added Questions component and new font files

--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -9,10 +9,6 @@ html {
 a {
   transform: perspective(1px) translateZ(0);
   transition-duration: 0.3s;
-
-  &.btn:hover {
-    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-  }
 }
 
 body {
@@ -30,10 +26,19 @@ body {
 form {
   input {
     font-family: $font-primary;
+    border: 1px solid #ccc;
+    padding: 12px 10px;
 
     &:focus {
       outline: none;
     }
+  }
+
+  textarea {
+    border: 1px solid #ccc;
+    font-family: $font-primary;
+    padding: 10px;
+    width: 100%;
   }
 }
 
