--- a/src/assets/scss/base/_commons.scss
+++ b/src/assets/scss/base/_commons.scss
@@ -6,12 +6,11 @@
   padding: 12px 20px;
   text-decoration: none;
   color: $color-white;
-  margin: 20px auto;
   transition: all 300ms;
 
-  // &:hover {
-  //   background-color: $color-primary-dark;
-  // }
+  &:hover {
+    box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .container {
