--- a/src/assets/scss/base/_fonts.scss
+++ b/src/assets/scss/base/_fonts.scss
@@ -27,40 +27,43 @@
 }
 
 .icon-checkmark:before {
-  content: "\e907";
-}
-.icon-player:before {
-  content: "\e908";
+  content: "\e909";
 }
 .icon-buymeacoffee:before {
-  content: "\e906";
-}
-.icon-youtube:before {
-  content: "\e905";
-}
-.icon-twitter:before {
-  content: "\e900";
-}
-.icon-instagram:before {
-  content: "\e901";
-}
-.icon-facebook:before {
   content: "\e902";
 }
+.icon-youtube:before {
+  content: "\e908";
+}
+.icon-twitter:before {
+  content: "\e907";
+}
+.icon-instagram:before {
+  content: "\e906";
+}
+.icon-facebook:before {
+  content: "\e905";
+}
 .icon-discord:before {
-  content: "\e903";
+  content: "\e900";
   color: #fff;
 }
 .icon-patreon:before {
-  content: "\e904";
+  content: "\e901";
   color: #f96854;
 }
 .icon-user:before {
-  content: "\e909";
+  content: "\e904";
 }
 .icon-google:before {
-  content: "\e90a";
+  content: "\e903";
 }
 .icon-github:before {
+  content: "\e90a";
+}
+.icon-like:before {
   content: "\e90b";
+}
+.icon-comment:before {
+  content: "\e90c";
 }
