--- a/src/assets/scss/components/dashboard/_question.scss
+++ b/src/assets/scss/components/dashboard/_question.scss
@@ -1,5 +1,9 @@
 .question {
   border-bottom: 1px solid #ccc;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
   padding: 10px 0 20px;
 
   &:last-child {
@@ -8,23 +12,27 @@
 
   h4 {
     margin-bottom: 20px;
+    width: 100%;
   }
 
   &__comments {
-    margin-right: 20px;
+    margin-right: 40px;
   }
 
   &__likes {
-    margin-right: 20px;
   }
 
-  &__join {
-    color: $color-blue-dark;
-    font-size: 12px;
+  &__social {
+    span {
+      cursor: pointer;
+    }
+  }
 
-    // @media (prefers-color-scheme: dark) {
-    //   color: $color-white;
-    // }
+  &__button {
+    button {
+      padding: 5px 10px;
+      font-weight: 400;
+    }
   }
 }
 
