--- a/src/assets/scss/components/filters/_category-filter.scss
+++ b/src/assets/scss/components/filters/_category-filter.scss
@@ -1,5 +1,6 @@
 .category-filter {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   margin-bottom: 30px;
   padding: 0;
@@ -9,7 +10,7 @@
     border-radius: 10px;
     color: white;
     cursor: pointer;
-    margin-right: 15px;
+    margin: 0 15px 10px 0;
     opacity: 0.5;
     padding: 10px;
 
