--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@
 @import "./assets/scss/components/talks/talk";
 @import "./assets/scss/components/announcements/announcement";
 @import "./assets/scss/components/calendar/calendar";
+@import "./assets/scss/components/questions/questions";
 
 //Containers
 @import "./assets/scss/containers/login.scss";
