refactored lesson section

--- a/src/assets/scss/components/questions/_questions.scss
+++ b/src/assets/scss/components/questions/_questions.scss
@@ -15,9 +15,10 @@
       align-items: flex-start;
       flex-wrap: wrap;
 
-      button {
+      .btn {
         font-weight: normal;
         padding: 5px 15px;
+        font-weight: 600;
       }
 
       input {
