--- a/src/assets/scss/base/_commons.scss
+++ b/src/assets/scss/base/_commons.scss
@@ -6,6 +6,7 @@
   padding: 12px 20px;
   text-decoration: none;
   color: $color-white;
+  cursor: pointer;
   transition: all 300ms;
 
   &:hover {
@@ -26,7 +27,7 @@
   }
 
   @include breakpoint($lg) {
-    max-width: 1200px;
+    max-width: 80%;
   }
 }
 
