--- a/src/assets/scss/components/dashboard/_membership.scss
+++ b/src/assets/scss/components/dashboard/_membership.scss
@@ -1,7 +1,7 @@
 .membership {
   background: rgba(255, 204, 0, 0.09);
   padding: 10px 15px;
-  margin-bottom: 40px;
+  margin: 30px 0 40px;
   border-radius: 3px;
   box-shadow: 0 2px 12px 0px rgb(213, 213, 209);
   // @media (prefers-color-scheme: dark) {
