--- a/src/assets/scss/components/dashboard/_question.scss
+++ b/src/assets/scss/components/dashboard/_question.scss
@@ -4,7 +4,8 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0 20px;
+  margin: 20px 0;
+  padding: 0 0 20px;
 
   &:last-child {
     border-bottom: 0;
@@ -20,18 +21,32 @@
   }
 
   &__likes {
-  }
-
-  &__social {
-    span {
+    .icon {
       cursor: pointer;
     }
   }
 
+  &__social {
+    display: flex;
+    align-items: center;
+
+    span {
+      font-size: 16px;
+      margin-left: 5px;
+    }
+
+    .icon {
+      font-size: 24px;
+      vertical-align: middle;
+    }
+  }
+
   &__button {
-    button {
-      padding: 5px 10px;
-      font-weight: 400;
+    .btn {
+      display: block;
+      font-size: 14px;
+      padding: 7px 14px;
+      font-weight: 600;
     }
   }
 }
