--- a/src/assets/scss/components/lessons/_lesson-resource.scss
+++ b/src/assets/scss/components/lessons/_lesson-resource.scss
@@ -1,8 +1,4 @@
-.articles {
-  &__list {
-    padding: 30px 0;
-  }
-
+.lesson-resource {
   &__item {
     display: flex;
     align-items: center;
@@ -18,11 +14,7 @@
       width: 15%;
 
       @include breakpoint($sm) {
-        width: 10%;
-      }
-
-      @include breakpoint($md) {
-        width: 20%;
+        width: 8%;
       }
 
       img {
