--- a/src/assets/scss/components/lessons/_lesson-video.scss
+++ b/src/assets/scss/components/lessons/_lesson-video.scss
@@ -9,7 +9,7 @@
   }
 
   @include breakpoint($lg) {
-    max-width: 1200px;
+    max-width: 80%;
   }
 
   &-info {
@@ -84,7 +84,7 @@
       }
 
       @include breakpoint($lg) {
-        height: 470px;
+        height: 598px;
       }
     }
 
